testsuite/tests/checks/local_packages/test.out
pack.ads:2:12: error: declaration of local package
2 |    package Inner is    --  FLAG
  |            ^^^^^ 

